# demo

./: .gitlab-ci.yml  .hgignore  Cargo.toml  Containerfile  Dockerfile  build.rs  cbindgen.toml  cl-demo.asd  db.lisp  default.cfg  default.sxp  demo.asd  demo.lisp  ffi.lisp  gen.rs  install.lisp  lib.rs  makefile  package.lisp  pkg.lisp  readme.org  rs.lisp  run.lisp  system-index.txt  tests.lisp  tk.lisp  ui.lisp
cfg/: Cargo.toml
cfg/src/: lib.rs
docs/: notes.org
examples/: vegadat.lisp
examples/db/: cl-simple-example.lisp  mini-redis.lisp  tao.lisp
examples/rdb/: cl-simple-example.lisp
ffi/: build.py  demo.h  mpk_ffi.h
fig/: Cargo.toml
fig/src/: lib.rs  tests.rs
proc_macros/: Cargo.toml
ros/: build.ros
scripts/: build.ros  clean.ros  compile.ros  demo.ros  docs.ros  fmt.ros  test.ros
src/: build.rs  demo.lisp  ffi.lisp  lib.rs  package.lisp  packages.lisp  tests.lisp  tk.lisp
src/cli/: cli.lisp  package.lisp
src/crates/service/: Cargo.toml  main.rs
src/crates/ui/: build.rs  config.slint  lib.rs
src/crates/ui/pages/: about.slint
src/db/: db.lisp
src/tests/: demo_test.c  demo_test.py  package.lisp  prime-test.lisp  utils.lisp
src/tests/clients/: cli.lisp  web.lisp
src/tk/: rs.lisp
src/ui/: ui.lisp
src/utils/: rs.lisp  utils.lisp
tools/: asdf.lisp  build-cli.lisp  build-image.lisp  dep.sh  deps.nu  deps.sh  init.lisp  prepare-image.lisp
tools/scripts/: check.ros  demo.ros  pack.ros
ui/: Cargo.toml  index.html  main.rs  pages.slint  sidebar.slint  ui.slint
ui/pages/: controls.slint  list_view.slint  page.slint  table_view.slint  text_edit.slint
ui/src/: lib.rs  main.rs
www/: boot.html  bootstrap.html
