[package]
name = "demo"
version = "0.1.0"
build = "build.rs"
[lib]
path = "lib.rs"
crate-type = ["cdylib"]
[workspace]
members = ["obj","fig","proc_macros"]
[dependencies]
libc = "0.2"
obj = {version = "0.1.0",path = "obj"}
fig = {version = "0.1.0",path = "fig"}
[build-dependencies]
cbindgen = "0.24.3"