[package]
name = "ui"
version = "0.1.0"
edition = "2021"
[lib]
path = "src/lib.rs"
crate-type = ["rlib","cdylib"]
[[bin]]
name = "demo-ui"
path = "src/main.rs"
[dependencies]
wgpu = "0.16.1"
winit = "0.28.6"
obj = {version = "0.1.0",path = "../obj"}
fig = {version = "0.1.0",path = "../fig"}
env_logger = "0.10.0"
log = "0.4.17"
cfg-if = "1.0.0"
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
