[package]
name = "ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[lib]
path = "lib.rs"
crate-type = ["rlib","cdylib"]
[[bin]]
name = "demo-ui"
path = "main.rs"
[build-dependencies]
slint-build = "1.0.2"
[dependencies]
obj = {version = "0.1.0",path = "../obj"}
fig = {version = "0.1.0",path = "../fig"}
env_logger = "0.10.0"
log = "0.4.17"
slint = "1.0.2"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features=["console"] }
console_error_panic_hook = "0.1.5"
