[package]
name = "demo_service"
version = "0.1.0"
edition = "2021"
[lib]
path = "lib.rs"
[[bin]]
name = "demo-service"
path = "main.rs"
[[test]]
name = "tests"
path = "tests.rs"

[dependencies]
obj = { version = "0.1.0", path = "../obj" }
tokio = { version = "1.28.2", features = ["full"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "postgres"] }
axum = { version = "0.6.18" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"

